@@ -20,6 +20,10 @@
 
 package Lintian::copyright_file;
 use strict;
+
+use lib "$ENV{'LINTIAN_ROOT'}/checks/";
+use common_data;
+
 use Dep;
 use Spelling;
 use Tags;
@@ -27,22 +31,16 @@ use Util;
 
 use Encode qw(decode);
 
-# Used in depends_on()
-my $info;
-
 sub run {
 
 my $pkg = shift;
 my $type = shift;
-$info = shift;
+my $info = shift;
 
 my $ppkg = quotemeta($pkg);
 
 my $found = 0;
 my $linked = 0;
-
-use lib "$ENV{'LINTIAN_ROOT'}/checks/";
-use common_data;
 
 # Read package contents...
 foreach (sort keys %{$info->index}) {
@@ -86,27 +84,23 @@ foreach (sort keys %{$info->index}) {
 	    last;
     	}
 
-	# link might point to a subdirectory of another /usr/share/doc
-	# directory
+	# The symlink may point to a subdirectory of another /usr/share/doc
+	# directory.  This is allowed if this package depends on link and both
+	# packages come from the same source package.
+	#
+	# Policy requires that packages be built from the same source if
+	# they're going to do this, which by my (rra's) reading means that we
+	# should have a strict version dependency.  However, in practice the
+	# copyright file doesn't change a lot and strict version dependencies
+	# cause other problems (such as with arch: any / arch: all package
+	# combinations and binNMUs).
+	#
+	# We therefore just require the dependency for now and don't worry
+	# about the version number.
 	$link =~ s,/.*,,;
-
-    	# this case is allowed, if this package depends on link
-    	# and both packages come from the same source package
-
-	if (not defined $info->field('version')) {
-	    fail("Can't open fields/version: $!");
-	} else {
-	    my $our_version = $info->field('version');
-
-	    # depend on $link pkg?
-	    if ((not depends_on($link, $our_version)) &&
-	         not (exists($known_essential{$link}) &&
-	         defined($known_essential{$link}))) {
-		# no, it does not.
-
-		tag "usr-share-doc-symlink-without-dependency", "$link";
-		last;
-	    }
+	if (not depends_on($info, $link)) {
+	    tag 'usr-share-doc-symlink-without-dependency', $link;
+	    last;
     	}
 
     	# We can only check if both packages come from the same source
@@ -285,7 +279,6 @@ if ($gpl || m,/usr/share/common-licenses/GPL,) {
 	if (defined $info->field('pre-depends')) {
 	    push @depends, split (/\s*,\s*/, scalar $info->field('pre-depends'));
 	}
-	close DEP;
 	if (grep { /^libssl[0-9.]+(\s|\z)/ && !/\|/ } @depends) {
 	    tag 'possible-gpl-code-linked-with-openssl';
 	}
@@ -296,22 +289,17 @@ if ($gpl || m,/usr/share/common-licenses/GPL,) {
 
 # -----------------------------------
 
-# returns true, if $foo depends on $bar
+# Returns true if the package whose information is in $info depends $package
+# or if $package is essential.
 sub depends_on {
-    my ($package, $version) = @_;
-
-    my ($deps, $predeps) = ("", "");
-
-    if (defined $info->field('depends')) {
-	$deps = $info->field('depends');
-    }
-
-    if (defined $info->field('pre-depends')) {
-	$predeps = $info->field('pre-depends');
+    my ($info, $package) = @_;
+    return 1 if $known_essential{$package};
+    my $deps = $info->field('pre-depends') || '';
+    if ($info->field('depends')) {
+	$deps .= ', ' if $deps;
+	$deps .= $info->field('depends');
     }
     return 1 if Dep::implies(Dep::parse($deps), Dep::parse($package));
-    return 1 if Dep::implies(Dep::parse($predeps), Dep::parse($package));
-
     return 0;
 }
 
