@@ -1,0 +1,4 @@
+Testname: copyright-file-doc-symlink
+Version: 1.0
+Description: Test a symlinked /usr/share/doc
+Test-Against: usr-share-doc-symlink-without-dependency
